# prowhiz

./: .dvcignore  .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  PLAN.md  README.md  check_baseline.py  dvc.yaml  generate_datasets.py  params.yaml  plot_runs.py  pyproject.toml  quick_train.sh  run_for_one.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/experiment/: egnn_v1.yaml
configs/model/: egnn.yaml  mlp_baseline.yaml
configs/training/: default.yaml
scripts/: check_baseline.py  convert_labels.py  convert_lp_pdbbind.py  create_splits.py  download_pdbs.py  estimate_vram.py  evaluate.py  predict.py  prepare_dataset.py  train.py
src/prowhiz/: __init__.py
src/prowhiz/cli/: evaluate.py  predict.py  train.py
src/prowhiz/models/: __init__.py  baseline_mlp.py  egnn.py  gnn.py  heads.py
src/prowhiz/training/: __init__.py  losses.py  metrics.py  trainer.py
src/prowhiz/utils/: __init__.py  config.py  logging.py  registry.py
tests/: conftest.py
tests/fixtures/: mock_labels.csv  mock_structure.cif
tests/models/: test_baseline_mlp.py  test_egnn.py  test_gnn.py
tests/training/: test_losses.py  test_metrics.py
