[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prowhiz"
version = "0.1.0"
description = "Neural network for protein-ligand binding free energy prediction"
license = { file = "LICENSE" }
requires-python = ">=3.10"
# NOTE: torch and torch-geometric require special install steps — see INSTALL.md.
# The versions listed here work for CPU-only. For CUDA, install torch first via
# the PyTorch index URL, then torch-geometric, then install this package.
dependencies = [
    # PyTorch — CPU version from PyPI. For CUDA, install separately first:
    #   pip install torch --index-url https://download.pytorch.org/whl/cu121
    "torch>=2.3",
    # PyTorch Geometric — basic ops work without C++ extensions since PyG 2.4.
    # For full performance, install pyg-lib + torch-scatter + torch-sparse from:
    #   https://data.pyg.org/whl/torch-{VERSION}+{CUDA}.html
    "torch-geometric>=2.5",
    # Core scientific stack
    "gemmi>=0.6",          # fast mmCIF parser (C++ bindings)
    "hydra-core>=1.3",     # hierarchical config management
    "omegaconf>=2.3",      # structured config / YAML
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",         # cKDTree, pearsonr, kendalltau
    "mlflow>=2.12",        # experiment tracking
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "dvc>=3.50",           # data version control
    "ipykernel>=6.29",     # notebook support
    "types-tqdm",          # mypy stubs
    "aiohttp>=3.9",        # for scripts/download_pdbs.py
]
# W&B is optional — only needed if tracking.backend = "wandb"
wandb = ["wandb>=0.17"]

[project.scripts]
prowhiz-train   = "prowhiz.cli.train:main"
prowhiz-predict = "prowhiz.cli.predict:main"
prowhiz-eval    = "prowhiz.cli.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prowhiz"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["prowhiz"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "torch_geometric.*",
    "gemmi.*",
    "mlflow.*",
    "scipy.*",
    "hydra.*",
    "omegaconf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/prowhiz --cov-report=term-missing -q"
markers = [
    "slow: marks tests requiring real CIF files or large data",
    "gpu: marks tests requiring a CUDA device",
]
